A long message describing the changes...Knit outout to a docs folder

--- a/speed-and-distance.Rmd
+++ b/speed-and-distance.Rmd
@@ -2,8 +2,11 @@
 title: "speed-and-distance"
 author: "William Gilks"
 date: "29/07/2019"
-output: html_document
----
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
